--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "scripts": {
+    "db:seed": "ts-node prisma/seed.ts",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -12,10 +16,14 @@
     "react-is": "^19.0.0"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.8.0",
     "@prisma/client": "^5.18.0",
+    "@radix-ui/react-progress": "^1.1.6",
+    "@radix-ui/react-select": "^2.2.5",
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "d3": "^7.9.0",
     "lucide-react": "^0.510.0",
     "next": "15.3.2",
     "react": "^19.0.0",
@@ -27,6 +35,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/d3": "^7.4.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -34,6 +43,7 @@
     "eslint-config-next": "15.3.2",
     "prisma": "^5.18.0",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5"
   }
